helm/syslog-odoo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: odoo.syslogsolution.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syslog-odoo
            port:
              number: 80
